syntax = "proto3";

package raft;

option go_package = "github.com/imrenagi/raft/api";

service Raft {
  rpc RequestVote(VoteRequest) returns (VoteResponse) {}
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse) {}
}

message VoteRequest {
  uint64 term = 1;
  string candidate_id = 2;
  uint64 last_log_idx = 3;
  uint64 last_log_term = 4;
}

message VoteResponse {
  uint64 term = 1;
  bool vote_granted = 2;
}

message AppendEntriesRequest {
  uint64 term = 1;
  string leader_id = 2;
  uint64 prev_log_idx = 3;
  uint64 prev_log_term = 4;
  uint64 leader_commit_idx = 5;
  repeated Log entries = 6;
}

message AppendEntriesResponse {
  uint64 term = 1;
  bool success = 2;
}

message Log {
  uint64 term = 1;
  uint64 index = 2;
  bytes command = 3;
}

